--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.5.3
 
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.15
+  sqflite: ^2.2.0
+  path: ^1.8.3
+  path_provider: ^2.0.11
 
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
