--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
+  font_awesome_flutter: ^10.8.0
+
 
 dev_dependencies:
   flutter_test:
