--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   sqflite: ^2.2.0
   path: ^1.8.3
   path_provider: ^2.0.11
+  pedometer: ^4.0.2
 
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
