--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,17 +17,15 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.0.11
   pedometer: ^4.0.2
-
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   font_awesome_flutter: ^10.8.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   fonts:
@@ -39,3 +37,8 @@ flutter:
     - images/
 
   uses-material-design: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/maskot1.png"
