--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,12 @@ dependencies:
   image_picker: ^1.1.2
   font_awesome_flutter: ^10.8.0
   flutter_native_splash: ^2.4.3
+  intl: ^0.20.0
+  video_player: ^2.9.2
+  provider: ^6.1.2
+  fl_chart: ^0.69.2
+  permission_handler: ^11.3.1
+  http: ^1.2.2
 
 flutter_native_splash:
   color: "#ffffff"
