workoutpage inworkoutpage eklentisi ,home responsive, activity ufak düzenlemeler

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 
     <application
-        android:label="fitpil"
+        android:label="FitPill"
         android:icon="@mipmap/ic_launcher"
         android:requestLegacyExternalStorage="true">
         <activity
