--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_html: ^3.0.0-beta.2
   flutter_colorpicker: ^1.1.0
   icons_plus: ^5.0.0
+  url_launcher: ^6.3.1
+  flutter_html_table: ^3.0.0-beta.2
 
 flutter_native_splash:
   color: "#ffffff"
