--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   icons_plus: ^5.0.0
   url_launcher: ^6.3.1
   flutter_html_table: ^3.0.0-beta.2
+  syncfusion_flutter_charts: ^27.2.5
+  google_nav_bar: ^5.0.7
 
 flutter_native_splash:
   color: "#ffffff"
